@@ -113,13 +113,6 @@
                   original="__call__"
                   replacement=".patch_collective_quickupload.QuickUploadCapableFileFactory__call__" />
 
-    <monkey:patch
-        description="Fix getSize method for blob fields"
-        class="plone.app.blob.field.BlobWrapper"
-        original="getSize"
-        replacement=".patch_blob.patched_getSize"
-                docstringWarning="true"
-        />
 
     <monkey:patch description="Monkeypatch Products.TinyMCE.utility to fix bug in getContentType"
                   class="Products.TinyMCE.utility.TinyMCE"
