@@ -3,6 +3,7 @@ Changelog
 
 4.11-dev - (unreleased)
 -----------------------
+ * Bug fix WIP, don't release egg: added workaround for missing blobs [tiberich #4702]
 
 4.10 - (2011-11-25)
 -------------------
